# polana

./: .gitignore  README.md  pyproject.toml
dipolana/: util.py
polana/: util.py  util_pol.py  visualization.py
src/: .pol_MSI.py.swp  .pol_WFGS2.py.swp  clip_HONIR.py  clip_MSI.py  phot_dipol.py  plot_polres.py  plot_polstandard.py  pol_FOCAS.py  pol_HONIR.py  pol_MSI.py  pol_WFGS2.py
src/polana/: util.py  util_pol.py  visualization.py
src/polana/scripts/: JPL2T60.py  pol_FAPOL.py  pol_FOCAS.py
src/scripts/: plot_polres.py  pol_HONIR.py  pol_dipol.py
